--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
-	"appid": "wx3066b72e2291d839",
+	"appid": "wx548c1b9a04cffd4b",
 	"projectname": "PhotographerHelper_wxmp",
 	"debugOptions": {
 		"hidedInDevtools": []
