--- a/app.json
+++ b/app.json
@@ -2,17 +2,20 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/image/imageResizer/imageResizer",
+    "pages/image/momentsImage/momentsImage",
     "pages/image/waterMarker/waterMarker",
     "pages/image/image",
     "pages/image/imageClipper/imageClipper",
     "pages/calculator/depth/depth",
-    "pages/calculator/calculator"
+    "pages/calculator/calculator",
+    "pages/calculator/field/field",
+    "pages/index/help/help",
+    "pages/index/mine/mine"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTitleText": "洋芋摄影师助手",
+    "navigationBarTitleText": "洋芋田摄影小助手",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
@@ -24,20 +27,20 @@
       {
         "pagePath": "pages/image/image",
         "text": "图片工具",
-        "iconPath": "/images/image.png",
-        "selectedIconPath": "/images/image_selected.png"
+        "iconPath": "/images/tabbar/image.png",
+        "selectedIconPath": "/images/tabbar/image_selected.png"
       },
       {
         "pagePath": "pages/index/index",
         "text": "首页",
-        "iconPath": "/images/home.png",
-        "selectedIconPath": "/images/home_selected.png"
+        "iconPath": "/images/tabbar/home.png",
+        "selectedIconPath": "/images/tabbar/home_selected.png"
       },
       {
         "pagePath": "pages/calculator/calculator",
         "text": "摄影计算器",
-        "iconPath": "/images/calculator.png",
-        "selectedIconPath": "/images/calculator_selected.png"
+        "iconPath": "/images/tabbar/calculator.png",
+        "selectedIconPath": "/images/tabbar/calculator_selected.png"
       }
     ]
   }
